--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "concurrently": "^6.3.0",
+    "config": "^3.3.6",
     "express": "^4.17.1",
     "mongoose": "^6.0.12"
   },
