FEAT: backends routes

--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "author": "Mike Botkin <mr.m.botkin@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "concurrently": "^6.3.0",
     "config": "^3.3.6",
     "express": "^4.17.1",
+    "express-validator": "^6.13.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12"
   },
   "devDependencies": {
